--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,79 @@
+body, p, h1, ul, li, blockquote {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Volkorn', Georgia, serif;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 img {
-  width: 100px;
+  max-width: 100%;
+}
+
+.structure {
+  display: grid;
+  grid-template-columns: minmax(160px, 1fr) 3fr 300px;
+  grid-template-areas: 
+  'header header header'
+  'sidenav content ads'
+  'footer footer footer'
+  ;
+}
+
+.header {
+  grid-area: header;
+  background: linear-gradient(135deg, #8844EE, #B07DFB);
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+
+.logo {
+  max-width: 200px;
+}
+
+.header nav li {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px
+}
+
+.header nav a {
+  display: block;
+  padding: 10px;
+  color: #FFFFFF;
+  font-size: 1.125em;
+  background: rgba(0, 0, 0, .1);
+  border-radius: 5px;
+  transition: 0.1s;
+}
+
+.header nav a:hover {
+  background: rgba(0, 0, 0, .5);
+}
+
+.sidenav {
+  grid-area: sidenav;
+}
+
+.content {
+  grid-area: content;
+}
+
+.ads {
+  grid-area: ads;
+}
+
+.footer {
+  grid-area: footer;
 }
