Added styles in sidenav, footer and ads

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,6 +17,8 @@ a {
 
 img {
   max-width: 100%;
+  display: block;
+  border-radius: 5px;
 }
 
 .structure {
@@ -64,6 +66,24 @@ img {
 
 .sidenav {
   grid-area: sidenav;
+  background: #FAFBFC;
+  padding: 30px;
+}
+
+.sidenav li a {
+  display: block;
+  min-width: 60px;
+  max-width: 100px;
+  margin: 0 auto 30px auto;
+  background: #FFFFFF;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  transition: .1s ease-out;
+}
+
+.sidenav li a:hover {
+  background: #B07DFB;
 }
 
 .content {
@@ -72,8 +92,20 @@ img {
 
 .ads {
   grid-area: ads;
+  background: #FAFBFC;
+  display: grid;
+  align-content: start;
+  padding: 30px;
+  gap: 30px;
 }
 
 .footer {
   grid-area: footer;
+  background: linear-gradient(135deg, #8844EE, #B07DFB);
+}
+
+.footer p {
+  color: #FFFFFF;
+  text-align: center;
+  padding: 30px;
 }
