--- a/assets/styles.css
+++ b/assets/styles.css
@@ -88,6 +88,117 @@ img {
 
 .content {
   grid-area: content;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
+
+.col-wide {
+  grid-column: 1 / -1;
+}
+
+.image-1 {
+  grid-row: span 2;
+  align-self: end;
+}
+
+.image-2 {
+  align-self: end;
+}
+
+p {
+   font-size: 1.2em;
+   line-height: 1.6;
+   letter-spacing: -0.005em;
+   color:rgba(0, 0, 0, 0.7)
+}
+
+.info p + p {
+  margin-top: 30px;
+}
+
+.title {
+  color: #B07DFB;
+}
+
+.title h1 {
+  font-size: 3.75em;
+  line-height: 1;
+  font-weight: 700;
+}
+
+.title span {
+  font-size: 0.875em;
+  font-style: italic;
+}
+
+.characteristics {
+  display: flex;
+  align-items: flex-start;
+  gap: 30px;
+}
+
+.characteristics > div {
+  width: 80px;
+  text-align: center;
+  background: linear-gradient(135deg, #8844EE, #B07DFB);
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  border-radius: 5px 5px 10px 10px;
+}
+
+.characteristics span {
+  display: block;
+  color: #B07DFB;
+}
+
+.number {
+  font-size: 3em;
+  line-height: 1;
+  margin: 10px auto;
+}
+
+.label {
+  background: #FFFFFF;
+  border-radius: 0 0 5px 5px;
+  padding: 5px 0;
+}
+
+.contrast {
+  font-size: 0.875em;
+  color: #B07DFB;
+  max-width: 16em;
+}
+
+.quote, .attributes {
+  align-self: start;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+  background: linear-gradient(135deg, #8844EE, #B07DFB);
+}
+
+.quote p {
+  font-size: 1.5em;
+  font-style: italic;
+  text-align: center;
+  max-width: 500px;
+  margin: 0 auto;
+  color: #FFFFFF;
+}
+
+.attributes li {
+  color: #FFFFFF;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1.125em;
+  padding: 15px;
+}
+
+.attributes li + li {
+  border-top: 2px solid #B07DFB;
+
 }
 
 .ads {
