--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,7 +16,7 @@ a {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
   display: block;
   border-radius: 5px;
 }
@@ -208,6 +208,7 @@ p {
   align-content: start;
   padding: 30px;
   gap: 30px;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .footer {
@@ -298,3 +299,9 @@ p {
     margin: 30px 30px 30px 0;
   }
 } 
+
+@media (max-width:600px) {
+  .content {
+    grid-template-columns: auto;
+  }
+}
